:bug: Fix text wrapping

--- a/src/css/night-react/components/controls/sprites/_spritesCanvasControls.sass
+++ b/src/css/night-react/components/controls/sprites/_spritesCanvasControls.sass
@@ -41,4 +41,4 @@
         +element(content)
           overflow: hidden
           width: 100%
-          white-space: pre
+          white-space: pre-wrap
